# online-cinema

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: custom-endpoints.md
src/online_cinema/: __init__.py  main.py
src/online_cinema/api/: docs.py  router.py
src/online_cinema/api/dependencies/: auth.py
src/online_cinema/api/routes/: auth.py  commerce.py  health.py  movies.py  users.py
src/online_cinema/core/: __init__.py  celery_app.py  config.py  security.py
src/online_cinema/db/: init_db.py  session.py
src/online_cinema/db/models/: __init__.py  auth.py  commerce.py  movies.py
src/online_cinema/schemas/: auth.py  commerce.py  movies.py  user.py
src/online_cinema/services/: auth.py  commerce.py  email.py  movies.py  users.py
src/online_cinema/tasks/: tokens.py
tests/: conftest.py  test_auth.py  test_commerce.py  test_docs.py  test_health.py  test_movies.py
